--- a/package.json
+++ b/package.json
@@ -3,23 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "express-enrouten": "^1.3.0",
+    "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.2",
+    "webpack-merge": "^5.8.0",
+    "webpack-server": "^0.1.2"
+  },
+  "devDependencies": {
+    "concurrently": "^7.2.1",
+    "nodemon": "^2.0.16"
   },
   "scripts": {
     "start": "NODE_ENV=production node server/server.js",
-    "dev": "concurrently \"CHOKIDAR_USEPOLLING=true react-scripts start\" \"PORT=3001 nodemon --verbose -L --watch server server/server.js\"",
-    "build": "react-scripts build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "dev": "concurrently \"CHOKIDAR_USEPOLLING=true webpack serve --config webpack.dev.js\" \"PORT=3001 nodemon --verbose -L --watch server server/server.js\"",
+    "build": "webpack --config webpack.prod.js"
   },
   "browserslist": {
     "production": [
@@ -32,9 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^7.2.1",
-    "nodemon": "^2.0.16"
   }
 }
